# AwaazTwin

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  TODO.md  awaaztwin.example.yaml  docker-compose.yml  instruction.md  instruction_2.md  pyproject.toml
.github/workflows/: ci.yml
apps/portal/: .dockerignore  Dockerfile  package-lock.json  package.json
apps/portal/content/guides/: audio-preprocessing.mdx  first-clone.mdx
apps/portal/content/models/: bark-overview.mdx  xtts-v2.mdx
apps/portal/content/reference/: api-reference.mdx
apps/portal/content/tts/: coqui-setup.mdx  streaming-synthesis.mdx
apps/portal/content/voice-cloning/: advanced-techniques.mdx  getting-started.mdx  multilingual-cloning.mdx  noise-reduction.mdx
apps/portal/e2e/: portal-smoke.spec.ts  practice-flow.spec.ts  uat-scenarios.spec.ts
apps/portal/src/app/: layout.tsx  page.tsx
backend/: __init__.py  config.py  database.py  main.py  models.py  requirements.txt  schemas.py  storage.py
backend/engines/: __init__.py  base.py  config.py  factory.py  openvoice.py  xtts_hindi.py
backend/routers/: admin.py  health.py  synthesis.py  voices.py
backend/tests/: test_engines.py  test_workers.py
backend/workers/: __init__.py  celery_app.py  synthesis_worker.py  voice_prep_worker.py
docs/: design.md  ui-design.md
infra/docker/: Dockerfile.backend  Dockerfile.portal
scripts/: setup_macos.sh  setup_windows.ps1
tests/backend/: test_api.py  test_config.py  test_engines.py  test_schemas.py
workers/: common.py  synthesis_worker.py  voice_prep.py
(+47 files in other folders)
